# datafusion-archive

./: .dockerignore  .gitignore  .travis-docker.yml  .travis.yaml  .travis.yml  .travis.yml.old  BUILDING.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  smoketest.sh
.circleci/: config.yml
benches/: dataframe_bench.rs  filter_primitive.broken  filter_primitive.rs  read_csv.rs  sql_bench.rs  udf_udt.rs
benches_old/: dataframe_bench.rs  read_csv.rs  sql_bench.rs
docs/: sql_support.md
examples/: csv_dataframe.rs  csv_sql.rs  csv_sql_aggregates.rs  dataframe.old  dataframe.rs  ndjson_sql.rs  parquet_dataframe.rs  parquet_sql.rs  query_planning.rs  quiver_format.rs  simple_select.rs  sql_query.old  sql_query.rs
protobuf/: datafusion.proto  gandiva.proto
scripts/: release.sh  smoketest.sh
scripts/circle/: build-examples.sh  build-release.sh  build.sh  test.sh
scripts/docker/: Dockerfile  build.sh  entrypoint.sh  install-docker.sh
scripts/docker/base/: Dockerfile  build.sh
scripts/docker/console/: Dockerfile  build.sh  console.sh
scripts/docker/worker/: Dockerfile  build.sh
src/: api.rs  arrow.rs  cluster.rs  compiler.rs  csv.rs  csvrelation.rs  data.rs  dataframe.rs  datasource.rs  dfparser.rs  errors.rs  exec.rs  lib.rs  logical.rs  logicalplan.rs  main.rs  parser.rs  persist.rs  plan.rs  rel.rs  schema.rs  sql.rs  sqlast.rs  sqlcompiler.rs  sqlparser.rs  sqlplanner.rs  sqltokenizer.rs  sqltorel.rs  types.rs  worker.rs
src/datasource/: mod.rs
src/datasource/csv/: mod.rs
src/datasources/: common.rs  csv.rs  empty.rs  mod.rs  ndjson.rs  parquet.rs  quiver.rs
src/execution/: aggregate.rs  context.rs  datasource.rs  error.rs  expression.rs  filter.rs  mod.rs  physicalplan.rs  projection.rs  relation.rs  value.rs
src/functions/: conversions.rs  count.rs  geospatial.rs  math.rs  max.rs  min.rs  mod.rs  sum.rs
src/functions/geospatial/: mod.rs  st_astext.rs  st_point.rs
src/relations/: aggregate.rs  filter.rs  limit.rs  mod.rs  projection.rs  sort.rs
test/data/: aggregate_test_1.csv  example1.ndjson  null_test.csv  smoketest-expected.txt  smoketest.sql
test/data/expected/: c_float32_high.csv  c_float32_low.csv  c_float32_low_uint32.csv  c_float64_high.csv  c_float64_low.csv  c_int16_cast.csv  c_int16_positive.csv  c_int32_cast.csv  c_int32_positive.csv  c_int64_negative.csv  c_int64_positive.csv  c_int8_col_gteq.csv  c_int8_col_lteq.csv  c_int8_col_noteq.csv  c_int8_negative.csv  c_int8_noteq.csv  c_int8_positive.csv  c_int8_range_exclusive.csv  c_int8_range_inclusive.csv  c_uint16_cast.csv  c_uint32_cast.csv  c_uint64_cast.csv  c_uint8_cast.csv  csv_aggregate_all_types.csv  csv_aggregate_by_c_bool.csv  numerics.csv  numerics_divide.csv  numerics_divide_f64.csv  numerics_minus.csv  numerics_minus_f64.csv  numerics_modulo.csv  numerics_modulo_f64.csv  numerics_multiply.csv  numerics_multiply_f64.csv  numerics_plus.csv  numerics_plus_f64.csv  parquet_aggregate_all_types.csv  parquet_query_all_types.csv  test_cast.csv  test_chaining_functions.csv  (+6 more)
tests/: all_types.rs  sql.rs
