[package]
name = "datafusion"
description = "DataFusion is a SQL parser, planner, and execution framework for Rust with support for CSV and Apache Parquet file formats"
version = "0.4.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
homepage = "https://datafusion.rs"
documentation = "https://datafusion.rs/docs/datafusion"
keywords = [ "distributed", "query", "data", "processing", "sql" ]
repository = "https://github.com/datafusion-rs/datafusion"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
name = "datafusion"
path = "src/lib.rs"

#[[bin]]
#name = "worker"
#path = "src/bin/worker/main.rs"
#
#[[bin]]
#name = "console"
#path = "src/bin/console/main.rs"

[dependencies]
#byteorder = "1"
#bytes = "0.4"
#clap = "2.31.2"
#csv = "1.0.0"
#fnv = "1.0.3"
#datafusion-arrow = { path = "../datafusion-arrow" }
datafusion-arrow = "0.12.1"
#datafusion-rustyline = "2.0.0-alpha-20180628"
#json = "0.11.13"
#lazy_static = "1.0"
#parquet = "0.4.1"
serde = { version = "1.0.80", features = ["alloc", "rc"] }
serde_derive = "1.0.80"
serde_json = "*"

#sqlparser = "0.1.8"

[dev-dependencies]
criterion = "0.2.0"

#[[bench]]
#name = "dataframe_bench"
#harness = false

#[[bench]]
#name = "sql_bench"
#harness = false

#[[bench]]
#name = "read_csv"
#harness = false

#[[bench]]
#name = "filter_primitive"
#harness = false
#
#[[bench]]
#name = "udf_udt"
#harness = false
